# gc_api

./: Cargo.toml  LICENSE-MIT  README.md
examples/: README.md
examples/gc_benchmark/: Cargo.toml
examples/gc_benchmark/benches/: mark_and_sweep.rs
examples/gc_benchmark_utils/: Cargo.toml
examples/gc_benchmark_utils/src/: lib.rs  tree.rs
examples/mark_and_compact/: Cargo.toml
examples/mark_and_compact/src/: lib.rs  tests.rs  trace.rs
examples/mark_and_compact/src/inner/: heap.rs  mark.rs  mod.rs  reference_table.rs
examples/mark_and_sweep/: Cargo.toml
examples/mark_and_sweep/src/: inner.rs  lib.rs  ptr_arena.rs  roots.rs  tests.rs  trace.rs
examples/mark_and_sweep/src/inner/: heap.rs  layout.rs  mod.rs
examples/mark_and_sweep/src/trace/: mod.rs  roots.rs
src/: access.rs  allocator.rs  error.rs  lib.rs  mark.rs  marker.rs  pointer.rs  root.rs  trace.rs
src/alloc/: access.rs  allocator.rs  api.rs  mod.rs
src/trace/: mod.rs  trace_impls.rs
src/trace/roots/: collections.rs  mod.rs
