[package]
name = "gc_api"
version = "0.4.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
description = "Generic abstractions for a multithreaded garbage collector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmeggitt/gc_api"
keywords = ["garbage", "memory", "api"]
readme = "README.md"
edition = "2021"

[dependencies]
lock_api = { version = "0.4", optional = true }
smallvec = "1.10.0"
